Prevents overflow of after map is displayed
The .search element was 399px wide, while screen was 375px (at least on Chrome iPhone 8 simulation)

--- a/style/app.css
+++ b/style/app.css
@@ -156,6 +156,15 @@ button {
   user-select: none;
 }
 
+.app {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  overflow: hidden;
+}
+
 .button,
 .kicker {
   font-family: Piaui;
